--- a/app/views/users/_admin.html.erb
+++ b/app/views/users/_admin.html.erb
@@ -1,4 +1,5 @@
-<div class="admin"><%= f.label :admin, "Admin" do %>
+<div class="admin">
+  <%= f.label :admin, "Admin" do %>
     <%= f.check_box :admin, {checked: true} %>
   <% end %>
 </div>
